@@ -1,3 +1,8 @@
+2017-07-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/player/ball_object.cpp:
+	- hearによるボール情報更新ルールを追加
+
 2017-06-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/common/logger.h:
